--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" href="data:,">
     <title>냉털이 - LeftOut</title>
     <style>
         * {
@@ -37,7 +37,7 @@
             margin-bottom: 10px;
         }
         .logo img {
-            width: 300px;
+            width: 450px;
             height: auto;
         }
 
