--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:,">
     <title>회원가입</title>
     <style>
         * {
@@ -59,9 +60,8 @@
         }
 
         .logo-section img {
-            width: 160px;
-            height: 80px;
-            object-fit: contain;
+            width: 280px;
+            height: 140px;
             margin-bottom: 15px;
         }
 
