--- a/src/main/resources/templates/emailSettings.html
+++ b/src/main/resources/templates/emailSettings.html
@@ -193,7 +193,7 @@
         <div class="info-box">
             <h4>&#128161; 알림 안내</h4>
             <p>유통기한 D-3, D-1, D-Day에 이메일로 알림을 받을 수 있습니다.<br>
-               매일 오전 9시에 알림이 발송됩니다.</p>
+               매일 오전 9시 30분에 알림이 발송됩니다.</p>
         </div>
 
         <div id="message" class="message"></div>
